--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
   </head>
 
   <body class="flex flex-col ">
-    <header class="flex p-6 justify-between">
-      <div class="flex h-6 flex-shrink-0">
+    <header class="flex md:p-6 p-3 justify-between">
+      <div class="flex md:h-6 h-5 mt-3 flex-shrink-0">
         <img src="images\Icon (1).png" alt="" class="px-2" />
         <img src="images/Nexcent.png" alt="" />
       </div>
       <div>
-        <nav>
+        <nav class="hidden md:flex">
           <ul class="flex">
             <li
               class="text-zinc-900 text-base font-medium font-['Inter'] leading-normal px-8"
@@ -52,31 +52,31 @@
           </ul>
         </nav>
       </div>
-      <div>
+      <div class="ml-2">
         <button
-          class="px-5 text-green-500 text-lg font-medium font-['Inter'] leading-tight"
+          class="px-5 text-green-500 md:text-lg text-sm font-medium font-['Inter'] leading-tight"
         >
           Login
         </button>
         <button
-          class="px-5 py-2 text-white text-lg font-medium font-['Inter'] leading-tight bg-green-500"
+          class="px-5 md:py-2 text-white md:text-lg text-sm font-medium font-['Inter'] leading-tight bg-green-500"
         >
           Sign up
         </button>
       </div>
     </header>
 
-    <section class="w-10/12 m-auto container">
+    <section class=" m-auto container">
       <div class="flex bg-slate-50 flex-col">
-        <div class="flex justify-center">
-          <div class="p-20">
+        <div class="flex justify-center flex-col-reverse md:flex-row">
+          <div class="md:p-20 p-10">
             <h1
-              class="text-neutral-600 text-[64px] font-semibold font-['Inter'] leading-[76px]"
+              class="text-neutral-600 md:text-[64px] text-[44px]  font-semibold font-['Inter'] leading-[76px]"
             >
               Lessons and insights
             </h1>
             <h1
-              class="text-green-500 text-[64px] font-semibold font-['Inter'] leading-[76px]"
+              class="text-green-500 md:text-[64px] text-[44px] font-semibold font-['Inter'] leading-[76px]"
             >
               from 8 years
             </h1>
@@ -87,13 +87,13 @@
               media?
             </p>
             <button
-              class="text-white text-base font-medium font-['Inter'] leading-normal bg-green-500 p-3 px-5 mt-5"
+              class="text-white text-base font-medium font-['Inter'] leading-normal bg-green-500 p-3 px-5 mt-5 "
             >
               Register
             </button>
           </div>
           <div class="flex">
-            <img src="images\Ekran görüntüsü 2023-10-16 104946.png" alt="" />
+            <img src="images\Ekran görüntüsü 2023-10-16 104946.png" alt="" class=" flex flex-shrink-0"/>
           </div>
         </div>
         <div class="flex justify-center pb-4">
@@ -103,8 +103,8 @@
       </div>
     </section>
 
-    <section class="flex flex-col text-center p-10 w-10/12 m-auto container">
-      <h1 class="text-neutral-600 text-4xl font-semibold font-['Inter']">
+    <section class="flex flex-col text-center p-10 md:w-10/12 m-auto container">
+      <h1 class="text-neutral-600 md:text-4xl text-2xl font-semibold font-['Inter']">
         Our Clients
       </h1>
       <p
@@ -112,18 +112,18 @@
       >
         We have been working with some Fortune 500+ clients
       </p>
-      <div class="flex justify-between pt-5 mx-10 mt-8">
-        <img src="images\Logo.png" alt="" class="w-10 h-10" />
-        <img src="images\Logo (1).png" alt="" class="w-10 h-7" />
-        <img src="images\Logo (2).png" alt="" class="w-[55px] h-[30px]" />
-        <img src="images\Logo (3).png" alt="" class="w-[47px] h-[29px]" />
-        <img src="images\Logo (4).png" alt="" class="w-[41px] h-[27px]" />
-        <img src="images\Logo (5).png" alt="" class="w-[52px] h-5" />
+      <div class="md:flex grid grid-cols-2 m-auto row-span-2 md:flex-row md:justify-between gap-4 md:pt-5 md:mx-10 mt-8 items-center">
+        <img src="images\Logo.png" alt="" class="md:w-10 md:h-10 md:mr-2 mb-2" />
+        <img src="images\Logo (1).png" alt="" class="md:w-10 md:h-7 md:mr-2 mb-2" />
+        <img src="images\Logo (2).png" alt="" class="md:w-[55px] md:h-[30px] md:mr-2 mb-2" />
+        <img src="images\Logo (3).png" alt="" class="md:w-[47px] md:h-[29px] md:mr-2 mb-2" />
+        <img src="images\Logo (4).png" alt="" class="md:w-[41px] md:h-[27px] md:mr-2 mb-2" />
+        <img src="images\Logo (5).png" alt="" class="md:w-[52px] md:h-5 md:mr-2" />
       </div>
     </section>
 
-    <section class="my-10 w-10/12 m-auto text-center container">
-      <h1 class="text-neutral-600 text-4xl font-semibold font-['Inter']">
+    <section class="my-10 md:w-10/12 m-auto text-center container ">
+      <h1 class="text-neutral-600 md:text-4xl text-2xl w-3/4 m-auto font-semibold font-['Inter']">
         Manage your entire community in a single system
       </h1>
       <p
@@ -131,16 +131,16 @@
       >
         Who is Nextcent suitable for?
       </p>
-      <div class="flex justify-between mx-36 my-10">
+      <div class="flex flex-col md:justify-between md:mx-36 my-10 md:flex-row items-center">
         <div
-          class="flex h-56 flex-col items-center w-48 border-y-4 border-green-800"
+          class="flex h-56 flex-col items-center mt-5 w-48 border-y-4 border-green-800 md:mr-10"
         >
           <img
             src="images\Icon (2).png"
             alt=""
             class="flex-shrink-0 w-12 h-12"
           />
-          <h2 class="text-neutral-600 text-[28px] font-bold leading-9">
+          <h2 class="text-neutral-600 md:text-[28px] text-[18px] font-bold leading-9">
             Membership Organisations
           </h2>
           <p
@@ -151,10 +151,10 @@
           </p>
         </div>
         <div
-          class="flex flex-col items-center h-56 border-y-4 border-green-800 w-48"
+          class="flex flex-col items-center mt-5 h-56 border-y-4 border-green-800 w-48 md:mr-10"
         >
           <img src="images\Icon (3).png" alt="" />
-          <h2 class="text-neutral-600 text-[28px] font-bold leading-9">
+          <h2 class="text-neutral-600 md:text-[28px] text-[18px] font-bold leading-9">
             National Associations
           </h2>
           <p
@@ -165,10 +165,10 @@
           </p>
         </div>
         <div
-          class="flex flex-col items-center h-56 border-y-4 border-green-800 w-48"
+          class="flex flex-col items-center mt-5 h-56 border-y-4 border-green-800 w-48 md:mr-10"
         >
           <img src="images\Icon (4).png" alt="" />
-          <h2 class="text-neutral-600 text-[28px] font-bold leading-9">
+          <h2 class="text-neutral-600 md:text-[28px] text-[18px] font-bold leading-9">
             Clubs And Groups
           </h2>
           <p
@@ -181,22 +181,22 @@
       </div>
     </section>
 
-    <section class="flex w-10/12 m-auto justify-center my-10 container">
-      <div class="mr-20">
+    <section class="container flex flex-col w-10/12 m-auto justify-center my-10 md:flex-row ">
+      <div class="md:mr-20">
         <img
           src="images\Ekran görüntüsü 2023-10-16 142455.png"
           alt=""
-          class="max-h-80"
+          class="md:max-h-80 md:min-w-fit m-auto flex-shrink-0"
         />
       </div>
-      <div class="flex flex-col w-[500px] h-[268px] mt-6 px-6">
+      <div class="flex flex-col sm:max-w-sm md:w-[500px] w-4/5 md:h-[268px] mt-6 md:px-6 m-auto text-center md:m-auto md:text-left">
         <h1
-          class="text-neutral-600 text-4xl font-semibold font-['Inter'] leading-[44px] pb-5"
+          class="text-neutral-600 md:text-4xl text-2xl font-semibold font-['Inter'] leading-[44px] pb-5"
         >
           The unseen of spending three years at Pixelgrade
         </h1>
         <p
-          class="text-neutral-500 text-sm font-normal font-['Inter'] leading-tight pb-5 w-[601px]"
+          class="text-neutral-500 text-sm font-normal font-['Inter'] leading-tight pb-5 md:w-[601px] w-3/4 m-auto min-w-fit"
         >
           Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed sit amet
           justo ipsum. Sed accumsan quam vitae est varius fringilla.
@@ -206,22 +206,22 @@
           elementum pulvinar odio.
         </p>
         <button
-          class="text-white text-base font-medium font-['Inter'] leading-normal bg-green-600 w-[140px] h-[46px]"
+          class="text-white text-base font-medium font-['Inter'] leading-normal bg-green-600 w-[140px] h-[46px] m-auto"
         >
           Learn More
         </button>
       </div>
     </section>
 
-    <section class="flex w-10/12 m-auto justify-around my-10 bg-slate-50 container">
-      <div class="flex flex-col my-12">
+    <section class="flex flex-col md:flex-row w-10/12 m-auto md:justify-around my-10 bg-slate-50 container items-center">
+      <div class="flex flex-col my-12 sm:pr-20">
         <h2
-          class="text-neutral-600 text-4xl font-semibold font-['Inter'] leading-[44px]"
+          class="text-neutral-600 md:text-4xl text-3xl font-semibold font-['Inter'] leading-[44px]"
         >
           Helping a local
         </h2>
         <h2
-          class="text-green-500 text-4xl font-semibold font-['Inter'] leading-[44px]"
+          class="text-green-500 md:text-4xl text-3xl font-semibold font-['Inter'] leading-[44px]"
         >
           business reinvent itself
         </h2>
@@ -234,9 +234,9 @@
       <div>
         <div class="flex my-8">
           <img src="images\Icon (5).png" alt="" class="w-12 h-12" />
-          <div class="flex flex-col pl-2">
+          <div class="flex flex-col pl-2 mr-10">
             <h2
-              class="text-neutral-600 text-[28px] font-bold font-['Inter'] leading-9"
+              class="text-neutral-600 md:text-[28px] text-[18px] font-bold font-['Inter'] leading-9"
             >
               2,245,341
             </h2>
@@ -251,7 +251,7 @@
           <img src="images\Icon (6).png" alt="" class="w-12 h-12" />
           <div class="flex flex-col pl-2">
             <h2
-              class="text-neutral-600 text-[28px] font-bold font-['Inter'] leading-9"
+              class="text-neutral-600 md:text-[28px] text-[18px] font-bold font-['Inter'] leading-9"
             >
               828,867
             </h2>
@@ -268,7 +268,7 @@
           <img src="images\Icon (7).png" alt="" class="w-12 h-12" />
           <div class="flex flex-col pl-2">
             <h2
-              class="text-neutral-600 text-[28px] font-bold font-['Inter'] leading-9"
+              class="text-neutral-600 md:text-[28px] text-[18px] font-bold font-['Inter'] leading-9"
             >
               46,328
             </h2>
@@ -283,7 +283,7 @@
           <img src="images\Icon (8).png" alt="" class="w-12 h-12" />
           <div class="flex flex-col pl-2">
             <h2
-              class="text-neutral-600 text-[28px] font-bold font-['Inter'] leading-9"
+              class="text-neutral-600 md:text-[28px] text-[18px] font-bold font-['Inter'] leading-9"
             >
               1,926,436
             </h2>
@@ -297,22 +297,22 @@
       </div>
     </section>
 
-    <section class="flex w-10/12 m-auto justify-center my-10 container">
+    <section class="flex flex-col md:flex-row w-10/12 m-auto justify-center my-10 container">
       <div class="mr-20">
         <img
           src="images\Ekran görüntüsü 2023-10-16 153512.png"
           alt=""
-          class="max-h-80 mt-5"
+          class="md:max-h-80 md:min-h-fit m"
         />
       </div>
-      <div class="flex flex-col w-[500px] h-[268px] mt-6 px-6">
+      <div class="flex flex-col md:w-[500px] md:h-[268px] mt-6 md:px-6">
         <h1
-          class="text-neutral-600 text-4xl font-semibold font-['Inter'] leading-[44px] pb-5"
+          class="text-neutral-600 md:text-4xl font-semibold font-['Inter'] leading-[44px] pb-5"
         >
           How to design your site footer like we did
         </h1>
         <p
-          class="text-neutral-500 text-sm font-normal font-['Inter'] leading-tight pb-5 w-[601px]"
+          class="text-neutral-500 text-sm font-normal font-['Inter'] leading-tight pb-5 md:w-[601px]"
         >
           Donec a eros justo. Fusce egestas tristique ultrices. Nam tempor,
           augue nec tincidunt molestie, massa nunc varius arcu, at scelerisque
@@ -331,38 +331,38 @@
       </div>
     </section>
 
-    <section class="flex flex-col mt-10 m-auto w-10/12 items-center text-center container">
+    <section class="flex flex-col mt-10 m-auto w-10/12 items-center text-center md:container">
       <h1
-        class="text-neutral-600 text-4xl font-semibold font-['Inter'] leading-[44px] text-center"
+        class="text-neutral-600 md:text-4xl text-3xl font-semibold font-['Inter'] leading-[44px] text-center"
       >
         Caring is the new marketing
       </h1>
       <p
-        class="text-neutral-500 text-base font-normal font-['Inter'] leading-normal mt-5 mb-10 w-1/3 text-center"
+        class="text-neutral-500 text-base font-normal font-['Inter'] leading-normal mt-5 mb-10 md:w-1/3 text-center"
       >
         The Nexcent blog is the best place to read about the latest membership
         insights, trends and more. See who's joining the community, read about
         how our community are increasing their membership income and lot's
         more.​
       </p>
-      <div class="flex">
+      <div class="flex flex-col md:flex-row align-middle">
         <div class="static px-14">
           <img
             src="images\image 18 (1).png"
             alt=""
-            class="max-w-[300px] rounded-lg"
+            class="md:max-w-[300px] rounded-lg"
           />
           <div
             class="bg-slate-50 w-64 p-6 rounded-lg relative bottom-16 left-6 shadow"
           >
             <p
-              class="text-neutral-500 text-xl font-semibold font-['Inter'] leading-7"
+              class="text-neutral-500 md:text-xl font-semibold font-['Inter'] leading-7"
             >
               Creating Streamlined Safeguarding Processes with OneRen
             </p>
             <div class="flex justify-center">
               <button
-                class="text-green-500 text-xl font-semibold font-['Inter'] leading-7"
+                class="text-green-500 md:text-xl font-semibold font-['Inter'] leading-7"
               >
                 Readmore
               </button>
@@ -380,14 +380,14 @@
             class="bg-slate-50 w-64 p-3 rounded-lg relative bottom-16 left-6 shadow"
           >
             <p
-              class="text-neutral-500 text-xl font-semibold font-['Inter'] leading-7"
+              class="text-neutral-500 md:text-xl font-semibold font-['Inter'] leading-7"
             >
               What are your safeguarding responsibilities and how can you manage
               them?
             </p>
             <div class="flex justify-center">
               <button
-                class="text-green-500 text-xl font-semibold font-['Inter'] leading-7"
+                class="text-green-500 md:text-xl font-semibold font-['Inter'] leading-7"
               >
                 Readmore
               </button>
@@ -405,13 +405,13 @@
             class="bg-slate-50 w-64 p-6 rounded-lg relative bottom-16 left-6 shadow"
           >
             <p
-              class="text-neutral-500 text-xl font-semibold font-['Inter'] leading-7"
+              class="text-neutral-500 md:text-xl font-semibold font-['Inter'] leading-7"
             >
               Revamping the Membership Model with Triathlon Australia
             </p>
             <div class="flex justify-center">
               <button
-                class="text-green-500 text-xl font-semibold font-['Inter'] leading-7"
+                class="text-green-500 md:text-xl font-semibold font-['Inter'] leading-7"
               >
                 Readmore
               </button>
@@ -422,9 +422,9 @@
       </div>
     </section>
 
-    <section class="bg-slate-50 flex-row m-auto w-full items-center text-center p-36 container">
+    <section class="bg-slate-50 flex-row m-auto w-full items-center text-center md:p-36 container px-3">
       <h1
-        class="text-gray-800 text-[64px] font-semibold font-['Inter'] leading-[76px] w-[800px] m-auto"
+        class="text-gray-800 text-2xl md:text-6xl font-semibold font-['Inter'] jus m-auto"
       >
         Pellentesque suscipit fringilla libero eu.
       </h1>
@@ -476,11 +476,11 @@
         </li> -->
 
     <footer
-      class="flex flex-row bg-gray-800 m-auto justify-between py-16 px-20 w-full"
+      class="flex md:flex-row flex-col bg-gray-800 m-auto md:justify-between py-16 px-20 w-full mt-10"
     >
-      <div class="flex-col justify-start items-start gap-10 inline-flex">
-        <div class="flex-col justify-start gap-2 flex pl-20">
-          <div class="flex justify-center w-21">
+      <div class="flex-col justify-start items-center md:items-start gap-10 inline-flex mb-10 mr-10">
+        <div class="flex-col justify-start gap-2 flex md:pl-20">
+          <div class="flex md:justify-center w-21">
             <img
               src="images\Icon (1).png"
               alt=""
@@ -514,14 +514,14 @@
           </div>
         </div>
       </div>
-      <div class="justify-start items-start gap-[30px] flex pr-20">
-        <div class="flex-col justify-start items-start gap-6 inline-flex">
+      <div class="justify-start flex-col md:flex-row items-center md:items-start md:gap-[30px] flex md:pr-20 ">
+        <div class="flex-col justify-start items-start gap-6 md:inline-flex mb-6">
           <div
-            class="w-40 text-white text-xl font-semibold font-['Inter'] leading-7"
+            class="w-40 text-white text-xl font-semibold font-['Inter'] leading-7 mb-5"
           >
             Company
           </div>
-          <div class="flex-col justify-start items-start gap-3 flex">
+          <div class="md:flex-col grid grid-cols-2 justify-start items-start gap-3 md:flex">
             <div
               class="w-40 text-slate-50 text-sm font-normal font-['Inter'] leading-tight"
             >
@@ -549,13 +549,13 @@
             </div>
           </div>
         </div>
-        <div class="flex-col justify-start items-start gap-6 inline-flex">
+        <div class="flex-col justify-start items-start gap-6 inline-flex mb-5">
           <div
             class="w-40 text-white text-xl font-semibold font-['Inter'] leading-7"
           >
             Support
           </div>
-          <div class="flex-col justify-start items-start gap-3 flex">
+          <div class="md:flex-col grid grid-cols-2 justify-start items-start gap-3 md:flex">
             <div
               class="w-40 text-slate-50 text-sm font-normal font-['Inter'] leading-tight"
             >
