Added a dropdown bar but its not efficient bc I don't know js so when you use a smaller screen, you can directly see the menu items. Also I have made few more detail corrections

--- a/index.html
+++ b/index.html
@@ -5,73 +5,158 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tailwind Exercise</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Plus+Jakarta+Sans:ital,wght@1,300&family=Prompt:ital,wght@0,300;1,100;1,400;1,600;1,900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Plus+Jakarta+Sans:ital,wght@1,300&family=Prompt:ital,wght@0,300;1,100;1,400;1,600;1,900&display=swap"
+      rel="stylesheet"
+    />
   </head>
 
-  <body class="flex flex-col ">
+  <body class="">
     <header class="flex md:p-6 p-3 justify-between">
-      <div class="flex md:h-6 h-5 mt-3 flex-shrink-0">
-        <img src="images\Icon (1).png" alt="" class="px-2" />
-        <img src="images/Nexcent.png" alt="" />
+      <div class="flex flex-col justify-around"> 
+        <div class="flex md:h-6 h-5 mt-3 flex-shrink-0">
+          <img src="images\Icon (1).png" alt="" class="px-2" />
+          <img src="images/Nexcent.png" alt="" />
+        </div>
+        <div class="ml-2 flex flex-col md:hidden">
+          <button
+            class="px-5 text-green-500 md:text-lg text-sm font-medium font-['Inter'] leading-tight h-10 m-auto"
+          >
+            Login
+          </button>
+          <button
+            class="px-5 md:py-2 text-white md:text-lg text-sm font-medium font-['Inter'] leading-tight bg-green-500 h-10 m-auto"
+          >
+            Sign up
+          </button>
+        </div>
       </div>
       <div>
-        <nav class="hidden md:flex">
-          <ul class="flex">
-            <li
-              class="text-zinc-900 text-base font-medium font-['Inter'] leading-normal px-8"
-            >
-              <a href="">Home</a>
-            </li>
-            <li
-              class="text-zinc-900 text-base font-medium font-['Inter'] leading-normal px-8"
-            >
-              <a href="">Service</a>
-            </li>
-            <li
-              class="text-zinc-900 text-base font-medium font-['Inter'] leading-normal px-8"
-            >
-              <a href="">Feature</a>
-            </li>
-            <li
-              class="text-zinc-900 text-base font-medium font-['Inter'] leading-normal px-8"
-            >
-              <a href="">Product</a>
-            </li>
-            <li
-              class="text-zinc-900 text-base font-medium font-['Inter'] leading-normal px-8"
-            >
-              <a href="">Tertimonial</a>
-            </li>
-            <li
-              class="text-zinc-900 text-base font-medium font-['Inter'] leading-normal px-8"
-            >
-              <a href="">FAQ</a>
-            </li>
-          </ul>
-        </nav>
-      </div>
-      <div class="ml-2">
         <button
-          class="px-5 text-green-500 md:text-lg text-sm font-medium font-['Inter'] leading-tight"
+          class="items-center w-10 h-10 text-sm inline-flex justify-center md:hidden text-gray-500 rounded-lg hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600"
+          type="button"
+          data-collapse-toggle="navbar-dropdown"
+          aria-controls="navbar-dropdown"
+          aria-expanded="false"
+        >
+          <span class="sr-only">Open main menu</span>
+          <svg
+            class="w-5 h-5"
+            aria-hidden="true"
+            xmlns="http://www.w3.org/2000/svg"
+            fill="none"
+            viewBox="0 0 17 14"
+          >
+            <path
+              stroke="currentColor"
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              stroke-width="2"
+              d="M1 1h15M1 7h15M1 13h15"
+            />
+          </svg>
+        </button>
+        <div
+          id="dropdownNavbar"
+          class="z-10 font-normal bg-slate-100 divide-y divide-gray-100 rounded-lg shadow w-28 md:hidden"
+        >
+          <nav>
+            <ul
+              class="py-2 text-sm text-gray-700 dark:text-gray-400 text-center"
+              aria-labelledby="dropdownLargeButton"
+            >
+              <li
+                class="text-zinc-900 text-base font-medium font-['Inter'] leading-normal border-x-2"
+              >
+                <a href="#">Home</a>
+              </li>
+              <li
+                class="text-zinc-900 text-base font-medium font-['Inter'] leading-normal border-2"
+              >
+                <a href="#">Service</a>
+              </li>
+              <li
+                class="text-zinc-900 text-base font-medium font-['Inter'] leading-normal border-2"
+              >
+                <a href="#">Feature</a>
+              </li>
+              <li
+                class="text-zinc-900 text-base font-medium font-['Inter'] leading-normal border-2"
+              >
+                <a href="#">Product</a>
+              </li>
+              <li
+                class="text-zinc-900 text-base font-medium font-['Inter'] leading-normal border-2"
+              >
+                <a href="#">Tertimonial</a>
+              </li>
+              <li
+                class="text-zinc-900 text-base font-medium font-['Inter'] leading-normal border-x-2"
+              >
+                <a href="#">FAQ</a>
+              </li>
+            </ul>
+          </nav>
+        </div>
+        <div>
+          <nav>
+            <ul class="md:flex justify-center items-center mt-3 hidden">
+              <li
+                class="text-zinc-900 text-base font-medium font-['Inter'] leading-normal px-8"
+              >
+                <a href="">Home</a>
+              </li>
+              <li
+                class="text-zinc-900 text-base font-medium font-['Inter'] leading-normal px-8"
+              >
+                <a href="">Service</a>
+              </li>
+              <li
+                class="text-zinc-900 text-base font-medium font-['Inter'] leading-normal px-8"
+              >
+                <a href="">Feature</a>
+              </li>
+              <li
+                class="text-zinc-900 text-base font-medium font-['Inter'] leading-normal px-8"
+              >
+                <a href="">Product</a>
+              </li>
+              <li
+                class="text-zinc-900 text-base font-medium font-['Inter'] leading-normal px-8"
+              >
+                <a href="">Tertimonial</a>
+              </li>
+              <li
+                class="text-zinc-900 text-base font-medium font-['Inter'] leading-normal px-8"
+              >
+                <a href="">FAQ</a>
+              </li>
+            </ul>
+          </nav>
+        </div>
+      </div>
+      <div class="ml-2 flex-col md:flex md:flex-row hidden">
+        <button
+          class="px-5 text-green-500 md:text-lg text-sm font-medium font-['Inter'] leading-tight h-10 m-auto"
         >
           Login
         </button>
         <button
-          class="px-5 md:py-2 text-white md:text-lg text-sm font-medium font-['Inter'] leading-tight bg-green-500"
+          class="px-5 md:py-2 text-white md:text-lg text-sm font-medium font-['Inter'] leading-tight bg-green-500 h-10 m-auto"
         >
           Sign up
         </button>
       </div>
     </header>
 
-    <section class=" m-auto container">
+    <section class="m-auto container">
       <div class="flex bg-slate-50 flex-col">
         <div class="flex justify-center flex-col-reverse md:flex-row">
           <div class="md:p-20 p-10">
             <h1
-              class="text-neutral-600 md:text-[64px] text-[44px]  font-semibold font-['Inter'] leading-[76px]"
+              class="text-neutral-600 md:text-[64px] text-[44px] font-semibold font-['Inter'] leading-[76px]"
             >
               Lessons and insights
             </h1>
@@ -87,13 +172,17 @@
               media?
             </p>
             <button
-              class="text-white text-base font-medium font-['Inter'] leading-normal bg-green-500 p-3 px-5 mt-5 "
+              class="text-white text-base font-medium font-['Inter'] leading-normal bg-green-500 p-3 px-5 mt-5"
             >
               Register
             </button>
           </div>
           <div class="flex">
-            <img src="images\Ekran görüntüsü 2023-10-16 104946.png" alt="" class=" flex flex-shrink-0"/>
+            <img
+              src="images\Ekran görüntüsü 2023-10-16 104946.png"
+              alt=""
+              class="flex flex-shrink-0"
+            />
           </div>
         </div>
         <div class="flex justify-center pb-4">
@@ -104,7 +193,9 @@
     </section>
 
     <section class="flex flex-col text-center p-10 md:w-10/12 m-auto container">
-      <h1 class="text-neutral-600 md:text-4xl text-2xl font-semibold font-['Inter']">
+      <h1
+        class="text-neutral-600 md:text-4xl text-2xl font-semibold font-['Inter']"
+      >
         Our Clients
       </h1>
       <p
@@ -112,18 +203,46 @@
       >
         We have been working with some Fortune 500+ clients
       </p>
-      <div class="md:flex grid grid-cols-2 m-auto row-span-2 md:flex-row md:justify-between gap-4 md:pt-5 md:mx-10 mt-8 items-center">
-        <img src="images\Logo.png" alt="" class="md:w-10 md:h-10 md:mr-2 mb-2" />
-        <img src="images\Logo (1).png" alt="" class="md:w-10 md:h-7 md:mr-2 mb-2" />
-        <img src="images\Logo (2).png" alt="" class="md:w-[55px] md:h-[30px] md:mr-2 mb-2" />
-        <img src="images\Logo (3).png" alt="" class="md:w-[47px] md:h-[29px] md:mr-2 mb-2" />
-        <img src="images\Logo (4).png" alt="" class="md:w-[41px] md:h-[27px] md:mr-2 mb-2" />
-        <img src="images\Logo (5).png" alt="" class="md:w-[52px] md:h-5 md:mr-2" />
+      <div
+        class="md:flex grid grid-cols-2 m-auto row-span-2 md:flex-row md:justify-between gap-4 md:pt-5 md:mx-10 mt-8 items-center"
+      >
+        <img
+          src="images\Logo.png"
+          alt=""
+          class="md:w-10 md:h-10 md:mr-2 mb-2"
+        />
+        <img
+          src="images\Logo (1).png"
+          alt=""
+          class="md:w-10 md:h-7 md:mr-2 mb-2"
+        />
+        <img
+          src="images\Logo (2).png"
+          alt=""
+          class="md:w-[55px] md:h-[30px] md:mr-2 mb-2"
+        />
+        <img
+          src="images\Logo (3).png"
+          alt=""
+          class="md:w-[47px] md:h-[29px] md:mr-2 mb-2"
+        />
+        <img
+          src="images\Logo (4).png"
+          alt=""
+          class="md:w-[41px] md:h-[27px] md:mr-2 mb-2"
+        />
+        <img
+          src="images\Logo (5).png"
+          alt=""
+          class="md:w-[52px] md:h-5 md:mr-2"
+        />
       </div>
     </section>
 
-    <section class="my-10 md:w-10/12 m-auto text-center container ">
-      <h1 class="text-neutral-600 md:text-4xl text-2xl w-3/4 m-auto font-semibold font-['Inter']">
+    <section class="my-10 md:w-10/12 m-auto text-center container">
+      <h1
+        class="text-neutral-600 md:text-4xl text-2xl w-3/4 m-auto font-semibold font-['Inter']"
+      >
         Manage your entire community in a single system
       </h1>
       <p
@@ -131,7 +250,9 @@
       >
         Who is Nextcent suitable for?
       </p>
-      <div class="flex flex-col md:justify-between md:mx-36 my-10 md:flex-row items-center">
+      <div
+        class="flex flex-col md:justify-between md:mx-36 my-10 md:flex-row items-center"
+      >
         <div
           class="flex h-56 flex-col items-center mt-5 w-48 border-y-4 border-green-800 md:mr-10"
         >
@@ -140,7 +261,9 @@
             alt=""
             class="flex-shrink-0 w-12 h-12"
           />
-          <h2 class="text-neutral-600 md:text-[28px] text-[18px] font-bold leading-9">
+          <h2
+            class="text-neutral-600 md:text-[28px] text-[18px] font-bold leading-9"
+          >
             Membership Organisations
           </h2>
           <p
@@ -154,7 +277,9 @@
           class="flex flex-col items-center mt-5 h-56 border-y-4 border-green-800 w-48 md:mr-10"
         >
           <img src="images\Icon (3).png" alt="" />
-          <h2 class="text-neutral-600 md:text-[28px] text-[18px] font-bold leading-9">
+          <h2
+            class="text-neutral-600 md:text-[28px] text-[18px] font-bold leading-9"
+          >
             National Associations
           </h2>
           <p
@@ -168,7 +293,9 @@
           class="flex flex-col items-center mt-5 h-56 border-y-4 border-green-800 w-48 md:mr-10"
         >
           <img src="images\Icon (4).png" alt="" />
-          <h2 class="text-neutral-600 md:text-[28px] text-[18px] font-bold leading-9">
+          <h2
+            class="text-neutral-600 md:text-[28px] text-[18px] font-bold leading-9"
+          >
             Clubs And Groups
           </h2>
           <p
@@ -181,7 +308,9 @@
       </div>
     </section>
 
-    <section class="container flex flex-col w-10/12 m-auto justify-center my-10 md:flex-row ">
+    <section
+      class="container flex flex-col w-10/12 m-auto justify-center my-10 md:flex-row"
+    >
       <div class="md:mr-20">
         <img
           src="images\Ekran görüntüsü 2023-10-16 142455.png"
@@ -189,7 +318,9 @@
           class="md:max-h-80 md:min-w-fit m-auto flex-shrink-0"
         />
       </div>
-      <div class="flex flex-col sm:max-w-sm md:w-[500px] w-4/5 md:h-[268px] mt-6 md:px-6 m-auto text-center md:m-auto md:text-left">
+      <div
+        class="flex flex-col sm:max-w-sm md:w-[500px] w-4/5 md:h-[268px] mt-6 md:px-6 m-auto text-center md:m-auto md:text-left"
+      >
         <h1
           class="text-neutral-600 md:text-4xl text-2xl font-semibold font-['Inter'] leading-[44px] pb-5"
         >
@@ -213,7 +344,9 @@
       </div>
     </section>
 
-    <section class="flex flex-col md:flex-row w-10/12 m-auto md:justify-around my-10 bg-slate-50 container items-center">
+    <section
+      class="flex flex-col md:flex-row w-10/12 m-auto md:justify-around my-10 bg-slate-50 container items-center"
+    >
       <div class="flex flex-col my-12 sm:pr-20">
         <h2
           class="text-neutral-600 md:text-4xl text-3xl font-semibold font-['Inter'] leading-[44px]"
@@ -297,7 +430,9 @@
       </div>
     </section>
 
-    <section class="flex flex-col md:flex-row w-10/12 m-auto justify-center my-10 container">
+    <section
+      class="flex flex-col md:flex-row w-10/12 m-auto justify-center my-10 container"
+    >
       <div class="mr-20">
         <img
           src="images\Ekran görüntüsü 2023-10-16 153512.png"
@@ -331,7 +466,9 @@
       </div>
     </section>
 
-    <section class="flex flex-col mt-10 m-auto w-10/12 items-center text-center md:container">
+    <section
+      class="flex flex-col mt-10 m-auto w-10/12 items-center text-center md:container"
+    >
       <h1
         class="text-neutral-600 md:text-4xl text-3xl font-semibold font-['Inter'] leading-[44px] text-center"
       >
@@ -422,7 +559,9 @@
       </div>
     </section>
 
-    <section class="bg-slate-50 flex-row m-auto w-full items-center text-center md:p-36 container px-3">
+    <section
+      class="bg-slate-50 flex-row m-auto w-full items-center text-center md:p-36 container px-3"
+    >
       <h1
         class="text-gray-800 text-2xl md:text-6xl font-semibold font-['Inter'] jus m-auto"
       >
@@ -478,7 +617,9 @@
     <footer
       class="flex md:flex-row flex-col bg-gray-800 m-auto md:justify-between py-16 px-20 w-full mt-10"
     >
-      <div class="flex-col justify-start items-center md:items-start gap-10 inline-flex mb-10 mr-10">
+      <div
+        class="flex-col justify-start items-center md:items-start gap-10 inline-flex mb-10 mr-10"
+      >
         <div class="flex-col justify-start gap-2 flex md:pl-20">
           <div class="flex md:justify-center w-21">
             <img
@@ -514,14 +655,20 @@
           </div>
         </div>
       </div>
-      <div class="justify-start flex-col md:flex-row items-center md:items-start md:gap-[30px] flex md:pr-20 ">
-        <div class="flex-col justify-start items-start gap-6 md:inline-flex mb-6">
+      <div
+        class="justify-start flex-col md:flex-row items-center md:items-start md:gap-[30px] flex md:pr-20"
+      >
+        <div
+          class="flex-col justify-start items-start gap-6 md:inline-flex mb-6"
+        >
           <div
             class="w-40 text-white text-xl font-semibold font-['Inter'] leading-7 mb-5"
           >
             Company
           </div>
-          <div class="md:flex-col grid grid-cols-2 justify-start items-start gap-3 md:flex">
+          <div
+            class="md:flex-col grid grid-cols-2 justify-start items-start gap-3 md:flex"
+          >
             <div
               class="w-40 text-slate-50 text-sm font-normal font-['Inter'] leading-tight"
             >
@@ -555,7 +702,9 @@
           >
             Support
           </div>
-          <div class="md:flex-col grid grid-cols-2 justify-start items-start gap-3 md:flex">
+          <div
+            class="md:flex-col grid grid-cols-2 justify-start items-start gap-3 md:flex"
+          >
             <div
               class="w-40 text-slate-50 text-sm font-normal font-['Inter'] leading-tight"
             >
