Added cursor pointers and made some corrections

--- a/index.html
+++ b/index.html
@@ -209,32 +209,32 @@
         <img
           src="images\Logo.png"
           alt=""
-          class="md:w-10 md:h-10 md:mr-2 mb-2"
+          class="md:w-10 md:h-10 md:mr-2 mb-2 cursor-pointer	"
         />
         <img
           src="images\Logo (1).png"
           alt=""
-          class="md:w-10 md:h-7 md:mr-2 mb-2"
+          class="md:w-10 md:h-7 md:mr-2 mb-2 cursor-pointer	"
         />
         <img
           src="images\Logo (2).png"
           alt=""
-          class="md:w-[55px] md:h-[30px] md:mr-2 mb-2"
+          class="md:w-[55px] md:h-[30px] md:mr-2 mb-2 cursor-pointer	"
         />
         <img
           src="images\Logo (3).png"
           alt=""
-          class="md:w-[47px] md:h-[29px] md:mr-2 mb-2"
+          class="md:w-[47px] md:h-[29px] md:mr-2 mb-2 cursor-pointer	"
         />
         <img
           src="images\Logo (4).png"
           alt=""
-          class="md:w-[41px] md:h-[27px] md:mr-2 mb-2"
+          class="md:w-[41px] md:h-[27px] md:mr-2 mb-2 cursor-pointer	"
         />
         <img
           src="images\Logo (5).png"
           alt=""
-          class="md:w-[52px] md:h-5 md:mr-2"
+          class="md:w-[52px] md:h-5 md:mr-2 cursor-pointer	"
         />
       </div>
     </section>
@@ -625,30 +625,30 @@
             <img
               src="images\Icon (1).png"
               alt=""
-              class="px-2 flex flex-shrink-0"
+              class="px-2 flex flex-shrink-0 cursor-pointer	"
             />
             <img
               src="images\Nexcent(2).png"
               alt=""
-              class="flex flex-shrink-0"
+              class="flex flex-shrink-0 cursor-pointer	"
             />
           </div>
           <div
-            class="text-slate-50 text-sm font-normal font-['Inter'] leading-tight pt-10"
+            class="text-slate-50 text-sm font-normal font-['Inter'] leading-tight pt-10 cursor-default"
           >
             Copyright © 2020 Nexcent ltd.
           </div>
           <div
-            class="text-slate-50 text-sm font-normal font-['Inter'] leading-tight pt-3"
+            class="text-slate-50 text-sm font-normal font-['Inter'] leading-tight pt-3 cursor-default"
           >
             All rights reserved
           </div>
           <div class="flex pt-3">
-            <img src="images\Social Icons1.png" alt="" class="pr-2" /><img
+            <img src="images\Social Icons1.png" alt="" class="pr-2 cursor-pointer	" /><img
               src="images\Social Icons2.png"
               alt=""
-              class="pr-2"
-            /><img src="images\Social Icons3.png" alt="" class="pr-2" /><img
+              class="pr-2 cursor-pointer	"
+            /><img src="images\Social Icons3.png" alt="" class="pr-2 cursor-pointer	" /><img
               src="images\Social Icons5.png"
               alt=""
             />
@@ -662,35 +662,35 @@
           class="flex-col justify-start items-start gap-6 md:inline-flex mb-6"
         >
           <div
-            class="w-40 text-white text-xl font-semibold font-['Inter'] leading-7 mb-5"
+            class="w-40 text-white text-xl font-semibold font-['Inter'] leading-7 mb-5 cursor-default"
           >
             Company
           </div>
           <div
-            class="md:flex-col grid grid-cols-2 justify-start items-start gap-3 md:flex"
+            class="md:flex-col grid grid-cols-2 justify-start items-start gap-3 md:flex cursor-pointer"
           >
             <div
-              class="w-40 text-slate-50 text-sm font-normal font-['Inter'] leading-tight"
+              class="w-40 text-slate-50 text-sm font-normal font-['Inter'] leading-tight cursor-pointer"
             >
               About us
             </div>
             <div
-              class="w-40 text-slate-50 text-sm font-normal font-['Inter'] leading-tight"
+              class="w-40 text-slate-50 text-sm font-normal font-['Inter'] leading-tight cursor-pointer"
             >
               Blog
             </div>
             <div
-              class="w-40 text-slate-50 text-sm font-normal font-['Inter'] leading-tight"
+              class="w-40 text-slate-50 text-sm font-normal font-['Inter'] leading-tight cursor-pointer"
             >
               Contact us
             </div>
             <div
-              class="w-40 text-slate-50 text-sm font-normal font-['Inter'] leading-tight"
+              class="w-40 text-slate-50 text-sm font-normal font-['Inter'] leading-tight cursor-pointer"
             >
               Pricing
             </div>
             <div
-              class="w-40 text-slate-50 text-sm font-normal font-['Inter'] leading-tight"
+              class="w-40 text-slate-50 text-sm font-normal font-['Inter'] leading-tight cursor-pointer"
             >
               Testimonials
             </div>
@@ -698,35 +698,35 @@
         </div>
         <div class="flex-col justify-start items-start gap-6 inline-flex mb-5">
           <div
-            class="w-40 text-white text-xl font-semibold font-['Inter'] leading-7"
+            class="w-40 text-white text-xl font-semibold font-['Inter'] leading-7 cursor-default"
           >
             Support
           </div>
           <div
-            class="md:flex-col grid grid-cols-2 justify-start items-start gap-3 md:flex"
+            class="md:flex-col grid grid-cols-2 justify-start items-start gap-3 md:flex cursor-pointer"
           >
             <div
-              class="w-40 text-slate-50 text-sm font-normal font-['Inter'] leading-tight"
+              class="w-40 text-slate-50 text-sm font-normal font-['Inter'] leading-tight cursor-pointer"
             >
               Help center
             </div>
             <div
-              class="w-40 text-slate-50 text-sm font-normal font-['Inter'] leading-tight"
+              class="w-40 text-slate-50 text-sm font-normal font-['Inter'] leading-tight cursor-pointer"
             >
               Terms of service
             </div>
             <div
-              class="w-40 text-slate-50 text-sm font-normal font-['Inter'] leading-tight"
+              class="w-40 text-slate-50 text-sm font-normal font-['Inter'] leading-tight cursor-pointer"
             >
               Legal
             </div>
             <div
-              class="w-40 text-slate-50 text-sm font-normal font-['Inter'] leading-tight"
+              class="w-40 text-slate-50 text-sm font-normal font-['Inter'] leading-tight cursor-pointer"
             >
               Privacy policy
             </div>
             <div
-              class="w-40 text-slate-50 text-sm font-normal font-['Inter'] leading-tight"
+              class="w-40 text-slate-50 text-sm font-normal font-['Inter'] leading-tight cursor-pointer"
             >
               Status
             </div>
@@ -734,22 +734,15 @@
         </div>
         <div class="flex-col justify-start items-start gap-6 inline-flex">
           <div
-            class="w-40 text-white text-xl font-semibold font-['Inter'] leading-7"
+            class="w-40 text-white text-xl font-semibold font-['Inter'] leading-7 cursor-default"
           >
             Stay up to date
           </div>
           <div class="w-[255px] h-10 relative">
-            <div
-              class="w-[255px] h-10 left-0 top-0 absolute opacity-20 bg-white rounded-lg"
-            ></div>
-            <div
-              class="w-[18px] h-[18px] left-[225px] top-[11px] absolute"
-            ></div>
-            <div
-              class="left-[12px] top-[9px] absolute text-gray-300 text-sm font-normal font-['Inter'] leading-tight"
-            >
-              Your email address
-            </div>
+            <input type="email"
+              class="rounded-lg w-[255px] h-10 absolute text-sm pl-2 font-normal font-['Inter'] leading-tight bg-slate-100"
+              placeholder="  Your email address">
+            </input>
           </div>
         </div>
       </div>
