--- a/index.html
+++ b/index.html
@@ -703,7 +703,7 @@
             Support
           </div>
           <div
-            class="md:flex-col grid grid-cols-2 justify-start items-start gap-3 md:flex cursor-pointer"
+            class="md:flex-col grid grid-cols-2 justify-start items-start gap-3 md:flex cursor-pointer md:pt-4 md:mt-1.5"
           >
             <div
               class="w-40 text-slate-50 text-sm font-normal font-['Inter'] leading-tight cursor-pointer"
